--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,45 @@
 .idea/WSItools.iml
 *.pyc
 ./build/*
+build/lib/wsitools/__init__.py
+build/lib/wsitools/file_management/__init__.py
+build/lib/wsitools/file_management/case_list_manager.py
+build/lib/wsitools/file_management/class_label_csv_manager.py
+build/lib/wsitools/file_management/offset_csv_manager.py
+build/lib/wsitools/file_management/wsi_case_manager.py
+build/lib/wsitools/patch_extraction/__init__.py
+build/lib/wsitools/patch_extraction/feature_map_creator.py
+build/lib/wsitools/patch_extraction/pairwise_patch_extractor.py
+build/lib/wsitools/patch_extraction/parallel_patch_extractor.py
+build/lib/wsitools/patch_extraction/patch_extractor.py
+build/lib/wsitools/tissue_detection/__init__.py
+build/lib/wsitools/tissue_detection/tissue_detector.py
+build/lib/wsitools/wsi_annotation/__init__.py
+build/lib/wsitools/wsi_annotation/point_annotation.py
+build/lib/wsitools/wsi_annotation/region_annotation.py
+build/lib/wsitools/wsi_registration/__init__.py
+build/lib/wsitools/wsi_registration/auto_wsi_matcher.py
+dist/wsitools-0.1.0-py3.6.egg
+dist/wsitools-0.1.dev0-py3.6.egg
+wsitools.egg-info/dependency_links.txt
+wsitools.egg-info/PKG-INFO
+wsitools.egg-info/requires.txt
+wsitools.egg-info/SOURCES.txt
+wsitools.egg-info/top_level.txt
+wsitools/__pycache__/__init__.cpython-36.pyc
+wsitools/file_management/__pycache__/case_list_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/class_label_csv_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/offset_csv_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/wsi_case_manager.cpython-36.pyc
+wsitools/__pycache__/__init__.cpython-36.pyc
+wsitools/file_management/__pycache__/case_list_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/class_label_csv_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/offset_csv_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/wsi_case_manager.cpython-36.pyc
+wsitools/__pycache__/__init__.cpython-36.pyc
+wsitools/file_management/__pycache__/case_list_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/class_label_csv_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/offset_csv_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/wsi_case_manager.cpython-36.pyc
+wsitools/file_management/__pycache__/case_list_manager.cpython-36.pyc
+wsitools/__pycache__/__init__.cpython-36.pyc
